@@ -188,15 +188,29 @@ public class DefaultKafkaHeaderMapperTests {
 		assertThat(target).containsExactlyInAnyOrder(
 				new RecordHeader(DefaultKafkaHeaderMapper.JSON_TYPES,
 						"{\"thisOnesAString\":\"java.lang.String\"}".getBytes()),
-				new RecordHeader("thisOnesAString", "\"foo\"".getBytes()),
+				new RecordHeader("thisOnesAString", "foo".getBytes()),
 				new RecordHeader("alwaysRaw", "baz".getBytes()),
 				new RecordHeader("thisOnesBytes", "bar".getBytes()));
 		headersMap.clear();
+		target.add(new RecordHeader(DefaultKafkaHeaderMapper.JSON_TYPES,
+						("{\"thisOnesAString\":\"java.lang.String\","
+						+ "\"backwardCompatible\":\"java.lang.String\"}").getBytes()));
+		target.add(new RecordHeader("backwardCompatible", "\"qux\"".getBytes()));
 		mapper.toHeaders(target, headersMap);
 		assertThat(headersMap).contains(
 				entry("thisOnesAString", "foo"),
 				entry("thisOnesBytes", "bar".getBytes()),
-				entry("alwaysRaw", "baz".getBytes()));
+				entry("alwaysRaw", "baz".getBytes()),
+				entry("backwardCompatible", "qux"));
+		mapper.setEncodeStrings(true);
+		target = new RecordHeaders();
+		mapper.fromHeaders(headers, target);
+		assertThat(target).containsExactlyInAnyOrder(
+				new RecordHeader(DefaultKafkaHeaderMapper.JSON_TYPES,
+						"{\"thisOnesAString\":\"java.lang.String\"}".getBytes()),
+				new RecordHeader("thisOnesAString", "\"foo\"".getBytes()),
+				new RecordHeader("alwaysRaw", "baz".getBytes()),
+				new RecordHeader("thisOnesBytes", "bar".getBytes()));
 	}
 
 	@Test
